# Fairy-dodge-assistant

./: .gitignore  CMakeLists.txt  README.md  main.cpp  screenshot.h
.github/workflows/: release.yaml
